Update short link URLs to use configurable base path

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
-VITE_SUPABASE_URL=your_supabase_url_here
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
-VITE_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key_here
+# Supabase Configuration
+# Obtén estas claves de: Supabase Dashboard → Settings → API
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
+
+# Base URL for short links
+# Set to your Vercel domain after deploying, e.g: https://url-shorter.vercel.app
+VITE_BASE_URL=http://localhost:5173
+
+# Stripe Configuration (optional)
+VITE_STRIPE_PUBLISHABLE_KEY=pk_test_xxx
