Fix SPA routing - serve index.html for all non-API routes

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
         {
             "source": "/r/:code",
             "destination": "/api/r/:code"
+        },
+        {
+            "source": "/((?!api/).*)",
+            "destination": "/index.html"
         }
     ]
 }
