--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.5.1",
     "pinia": "^3.0.4",
     "sass": "^1.97.2",
+    "stripe": "^20.2.0",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
