--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "chart.js": "^4.5.1",
+    "lucide-vue-next": "^0.563.0",
     "pinia": "^3.0.4",
     "sass": "^1.97.2",
     "stripe": "^20.2.0",
